RESOLVED FIXED149360
[iOS] did{Start,Finish}LoadForQuickLookDocumentInMainFrame is never called on WKNavigationDelegate
https://bugs.webkit.org/show_bug.cgi?id=149360
Summary [iOS] did{Start,Finish}LoadForQuickLookDocumentInMainFrame is never called on...
Andy Estes
Reported 2015-09-18 16:31:30 PDT
[iOS] did{Start,Finish}LoadForQuickLookDocumentInMainFrame is never called on WKNavigationDelegate
Attachments
Patch (190.62 KB, patch)
2015-09-18 16:34 PDT, Andy Estes
thorton: review+
Andy Estes
Comment 1 2015-09-18 16:31:53 PDT
Andy Estes
Comment 2 2015-09-18 16:34:23 PDT
Andy Estes
Comment 3 2015-09-18 16:45:41 PDT
Note You need to log in before you can comment on or make changes to this bug.